<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tower Defense</string>
    <string name="wave">Волна: %1$d</string>
    <string name="gold">Золото: %1$d</string>
    <string name="lives">Жизни: %1$d</string>
    <string name="start_wave">Начать волну</string>
    <string name="pause">Пауза</string>
    <string name="resume">Продолжить</string>
    <string name="game_over">Игра окончена</string>
    <string name="victory">Победа!</string>
    <string name="restart">Начать заново</string>
    <string name="upgrade">Улучшить</string>
    <string name="upgrade_cost">Стоимость: %1$d</string>
    <string name="tower_level">Уровень: %1$d</string>
    <string name="max_level">Макс. уровень</string>
    <string name="speed_1x">1x</string>
    <string name="speed_2x">2x</string>
    <string name="speed_3x">3x</string>
    <string name="game_speed">Скорость: %1$.1fx</string>
</resources>

